# dir-consolidator

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
backlog/: github_release.md
consolidator/: __init__.py  app.py
docs/: architecture.md  marketing_description.md  testing.md
docs/smoke_runs/: 2025-11-15-arm64.txt  2025-11-15-x86_64.txt
marketingdocs/: directory_consolidator_page.md  feature_list.md
scripts/: build_executable.sh  smoke_accuracy.py  thin_x86_64_libs.py
